# gemicle_task

./: .flake8  Dockerfile  pyproject.toml  readme.md  test_data.json
.github/workflows/: ci-cd.yml
app/warehouse/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
core/: settings.py  urls.py
tests/app/warehouse/: test_models.py  test_serializers.py  test_service.py  test_views.py
